# modulo_agendamento_v2

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
app/application/agent/: scheduling_agent_builder.py
app/application/agent/edges/orchestrator/: orchestrator_edges.py
app/application/agent/loaders/: edge_loader.py  node_loader.py
app/application/agent/node/orchestrator/: orchestrator_node.py  orchestrator_prompt.py
app/application/agent/state/: sheduling_agent_state.py
app/application/services/: scheduling_service.py
app/infrastructure/config/: config.py
app/infrastructure/interfaces/: illm_service.py
app/infrastructure/pesistence/: postgres_persistence.py
app/infrastructure/services/llm/: llm_factory.py  openai_service.py
app/presentation/: scheduling_routers.py
app/utils/: get_last_message.py
